2005-04-05  Matt Johnston  <matt@ucc.asn.au>

	* basic_io.hh: reserve() the string which we're appending to
	frequently. Seems to give ~5% speedup in 
	diff -r t:revision-0.16 -r t:revision-0.17 - can't hurt.

2005-04-04  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.spec, debian/control: We no longer need external popt.
	* INSTALL: Ditto, plus some general updating.
	
2005-04-04  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_sql_unpack.at: New test.
	* testsuite.at: Add it.

2005-04-04  Nathaniel Smith  <njs@codesourcery.com>

	* contrib/ciabot_monotone.py (config): Genericize again, so lazy
	people using it won't start sending commits for monotone.
	* .mt-attrs: Make it executable.

2005-04-04  Richard Levitte  <richard@levitte.org>

	* Makefile.am (EXTRA_DIST): Add the extra popt files.

	* popt/popt.3, popt/popt.ps, popt/testit.sh: Include a few more
	  files from popt, mostly to have documentation on hand.  post.ps
	  is mentioned in popt/README.

2005-04-03  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (EXTRA_DIST): Add contrib/ stuff to distributed
	files list.
	* contrib/ciabot_monotone.py (config.delivery): Turn on.
	(send_change_for): Don't include "ChangeLog:" line when extracting
	changelog.

2005-04-03  Nathaniel Smith  <njs@codesourcery.com>

	* contrib/ciabot_monotone.py: New file.
	* contrib/README: Describe it.

2005-04-03  Richard Levitte  <richard@levitte.org>

	* AUTHORS: Add information about popt.

	* monotone.cc (my_poptStuffArgFile): Include the bundled popt.h.
	Since we now have a working popt, we can remove the restrictions
	on the use of -@.
	* tests/t_at_sign.at: Test that we can take more tha one -@.
	* monotone.1: Document it.

	* popt/poptint.h (struct poptContext_s): Add field to keep track
	  of the number of allocated leftovers elements.
	* popt/popt.c (poptGetContext): Initialise it and use it.
	  (poptGetNextOpt): Use it and realloc leftovers when needed.